k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tu-dominio.com
      http:
        paths:
          - path: /tickets
            pathType: Prefix
            backend:
              service:
                name: tickets-microservice-service
                port:
                  number: 3000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-microservice-service
                port:
                  number: 3001
